--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,14 +1,14 @@
 header {
-    background-color: blue;
+    background-color: rgb(90, 90, 96);
 }
 
 a {
-    color: white;
+    color: rgb(0, 0, 0);
     text-decoration: none;
 }
 
 .post {
-    color: black;
+    color: rgb(74, 139, 119);
 }
 
 .message {
